# serhii-prompt-list

./: .gitignore  README.md  __init__.py  prompt_list_node.py  pyproject.toml
.github/workflows/: publish.yml
web/js/: dynamic_inputs.js
